[package]
name = "mechsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.3"
bincode = "1.3.3"
chrono = "0.4.26"
egui_extras = { version = "0.21.0", features = ["svg"] }
native-dialog = "0.6.4"
physx = "0.18.0"
rand = "0.8.5"
serde = "1.0.164"
thiserror = "1.0.43"
